--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<article class="post">
+<!-- <article class="post">
   <header class="post-header home">
     <div class="post-title">Articles</div>
   </header>
@@ -7,9 +7,13 @@
       {%- if site.posts.size > 0 -%}
     <ul class="post-list">
       {%- for post in site.posts -%}
-      <li class="post-list-item">
+      <li class="post-list-item"> -->
+
+
         <!-- {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%} -->
-        {%- assign date_format = "%Y/%m/%d" -%}
+
+
+        <!-- {%- assign date_format = "%Y/%m/%d" -%}
         <span class="post-date">{{ post.date | date: date_format }}</span>
       	<a class="post-link" href="{{ post.url | relative_url }}">
     	    {{ post.title | escape }}
@@ -23,5 +27,7 @@
 </article>
 
 
+</div> -->
 
-</div>
+
+
