--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,11 +13,27 @@
 
 <div class="sidebar-item sidebar-nav">
 	<ul class="nav">
-      <li class="nav-title">Pages</li>
+      <li class="nav-title">Me</li>
 	  <li>
-	  	<a class="nav-item" href="/">Articles</a>
+	  	<a class="nav-item" href="/">Hello! / CV</a>
 	  </li>
-	  {% assign pages_list = site.pages %}
+
+	  {% for category in site.categories %}
+			{% if category[0] == "diary" %}
+				<li>
+					<a class="nav-item" href="{{ root_url }}/{{ site.category_dir }}#{{ category | first }}">
+						<span class="name">{{ category | first }}</span>
+						<span class="badge">{{ category | last | size }}</span>
+					</a>
+				</li>
+			{% endif %}
+		{% endfor %}
+		
+	  <!-- <li>
+		<a class="nav-item" href="/">Diary</a>
+	  </li> -->
+
+	  <!-- {% assign pages_list = site.pages %}
 	  {% for node in pages_list %}
 	    {% if node.title != null %}
 	      {% if node.layout == "page" %}
@@ -28,25 +44,27 @@
 	        </li>
 	      {% endif %}
 	    {% endif %}
-	  {% endfor %}
+	  {% endfor %} -->
 	</ul>
 </div>
 
 <div class="sidebar-item sidebar-nav">
   	<ul class="nav">
-			<li class="nav-title">Categories</li>
-	    {% for category in site.categories %}
-	    <li>
-	    	<a class="nav-item" href="{{ root_url }}/{{ site.category_dir }}#{{ category | first }}">
-				<span class="name">{{ category | first }}</span>
-				<span class="badge">{{ category | last | size }}</span>
-	    	</a>
- 		</li>
+			<li class="nav-title">Study Map</li>
+		{% for category in site.categories %}
+			{% if category[0] != "diary" %}
+				<li>
+					<a class="nav-item" href="{{ root_url }}/{{ site.category_dir }}#{{ category | first }}">
+						<span class="name">{{ category | first }}</span>
+						<span class="badge">{{ category | last | size }}</span>
+					</a>
+				</li>
+			{% endif %}
 	    {% endfor %}
 	  </nav>
 	</ul>
 </div>
 
-<div class="sidebar-item sidebar-footer">
+<!-- <div class="sidebar-item sidebar-footer">
 	<p>Powered by <a href="https://github.com/jekyll/jekyll">Jekyll</a></p>
-</div>
+</div> -->
