--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,12 +94,16 @@ code {
 .sidebar {
 	/*position: fixed;*/
 	display: flex;
+	/* flex-direction: column;
+	align-items: center;
+	justify-content: center; */
 	flex-flow: column nowrap;
 	flex: 0 0 220px;
 	padding: 15px;
 	z-index: 1;
 	background-color: #222;
 	color: #fff;
+
 }
 
 .sidebar-item {
@@ -112,8 +116,8 @@ code {
 }
 
 .sidebar-brand > a {
-	font-size: 300%;
-	font-family: 'Gelasio';
+	font-size: 200%;
+	font-family: 'cursive';
 	color: #fff;
 }
 
